Continue trouble shooting issue with shifting background on homepage

--- a/goose-portfolio/src/Components/Contact/Contact.css
+++ b/goose-portfolio/src/Components/Contact/Contact.css
@@ -131,8 +131,8 @@
   }
   
   .ContactTitle {
-     height: 100%;
      width: 90%;
+     height: auto;
      padding-bottom: 30px;
       
   }
