--- a/goose-portfolio/src/Components/Footer/Footer.css
+++ b/goose-portfolio/src/Components/Footer/Footer.css
@@ -62,16 +62,15 @@
     }
 
     .FooterImg {
-        width: 80%;
-        height: 15%;
+        width: 90%;
+        height: auto;
     }
 
     .GooseFooter {
         position: relative;
         width: 100%;
-        height: 10%;
-        margin-top: -70%;
-        margin-left: -10%;
+        margin-top: -59%;
+        margin-left: 10%;
     }
 }
 
