--- a/goose-portfolio/src/Components/Skills/Skills.css
+++ b/goose-portfolio/src/Components/Skills/Skills.css
@@ -138,8 +138,8 @@
   .SkillsTitle {
     width: 250px;
     height: auto;
-    padding-left: 20px;
-    margin-top: -30px;
+    /* padding-left: 20px;
+    margin-top: -30px; */
     
       
   }
